--- a/plugins/chat/assets/stylesheets/common/chat-thread.scss
+++ b/plugins/chat/assets/stylesheets/common/chat-thread.scss
@@ -12,5 +12,10 @@
     overscroll-behavior: contain;
     display: flex;
     flex-direction: column-reverse;
+    transition: padding-top 0.2s ease-in-out;
+    padding-top: calc(
+      var(--chat-thread-header-offset, var(--chat-header-offset)) -
+        var(--chat-header-offset)
+    );
   }
 }
